fix: remove z-index on image card (#121)

--- a/src/blocks/ImageCard.scss
+++ b/src/blocks/ImageCard.scss
@@ -134,7 +134,6 @@
   justify-content: var(--tags-justify);
   position: absolute;
   top: 0;
-  z-index: 10;
   width: 100%;
   margin-block-start: var(--bloom-s1);
   padding-inline: var(--bloom-s4);
